--- a/project/krylyia.html
+++ b/project/krylyia.html
@@ -20,7 +20,9 @@
             <button class="nav1"><a href="sous.html">Соусы</a></button>
         </nav>
     </div>
-    <h1 style="margin-left: 290px;">Крылышки</h1>
+    <div class="title1">
+        <h1> Крылышки</h1>
+    </div>
     <div class="hfhf">
         <div class="main">
             <div class="mini-containere">
@@ -28,8 +30,7 @@
                 <h3>Крылышки 8 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -37,8 +38,7 @@
                 <h3>Крылышки 16  штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">800Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">800 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -46,8 +46,7 @@
                 <h3>Крылышки 25 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">1000Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">1000 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -55,8 +54,7 @@
                 <h3>Куринный нагетсы</h3>
                 <p class="opisanie">Куринный нагетсы</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -64,8 +62,7 @@
                 <h3>Корн док</h3>
                 <p class="opisanie">сардельки в кляре</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -73,8 +70,7 @@
                 <h3 style="padding-top: 90px;">Фри</h3>
                 <p class="opisanie">картофельные фри</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -82,8 +78,7 @@
                 <h3>Сырныйе палочки</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
         </div>
