--- a/project/napitki.html
+++ b/project/napitki.html
@@ -17,7 +17,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Напитки</h1>
+    <div class="title1">
+        <h1>Напитки</h1>
+    </div>
     <div class="hfhf">
         <div class="main">
             <div class="mini-containere">
@@ -25,8 +27,7 @@
                 <h3>Cola</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">100 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -34,8 +35,7 @@
                 <h3>Cola</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">200 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -43,8 +43,7 @@
                 <h3>Sprite</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">100 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -52,8 +51,7 @@
                 <h3>Sprite</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">200 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -61,8 +59,7 @@
                 <h3>Fanta</h3>
                 <p class="opisanie">0.5</p>
                 <div class="price-container">
-                    <p class="price">100Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">100 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -70,8 +67,7 @@
                 <h3>Fanta</h3>
                 <p class="opisanie">1L</p>
                 <div class="price-container">
-                    <p class="price">200Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">200 &#8381;</p> 
                 </div>
             </div>
         </div>
