--- a/project/rolly.html
+++ b/project/rolly.html
@@ -17,7 +17,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Суши</h1>
+    <div class="title1">
+        <h1>Суши</h1>
+    </div>
     <div class="hfhf">
         <div class="main">
             <div class="mini-containere">
@@ -25,8 +27,7 @@
                 <h3>Филадельфия</h3>
                 <p class="opisanie">семга, сыр</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina" id="kor">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -34,8 +35,7 @@
                 <h3>ПФила с огурцами</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе</p>
                 <div class="price-container">
-                    <p class="price">800Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">800 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -43,8 +43,7 @@
                 <h3>Онигара</h3>
                 <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
                 <div class="price-container">
-                    <p class="price">1000Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">1000 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -52,8 +51,7 @@
                 <h3>Дракон</h3>
                 <p class="opisanie">угорь, краб, огурец</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -61,8 +59,7 @@
                 <h3>Кавасаки</h3>
                 <p class="opisanie">жаренный лосось, блинчик, сыр</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p>                
-                     <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p>                
                 </div>
             </div>
             <div class="mini-containere">
@@ -70,8 +67,7 @@
                 <h3>Фристайл</h3>
                 <p class="opisanie">креветки, краб, огурец, сыр </p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
     
                 </div>
             </div>
@@ -80,8 +76,7 @@
                 <h3>Калифорния Green</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе</p>
                 <div class="price-container">   
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
     
                 </div>
             </div>
@@ -90,8 +85,7 @@
                 <h3>Филадельфия летняя</h3>
                 <p class="opisanie">Огурец, творожный сыр, рис</p>
                 <div class="price-container">
-                    <p class="price">250Тг</p>
-                    <button class="korzina">В корзину</button>
+                    <p class="price">250 &#8381;</p>
                 </div>
             </div>
             <div class="mini-containere">
@@ -99,8 +93,7 @@
                 <h3>Фила с огурцами</h3>
                 <p class="opisanie">семга, сыр, кунжут</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
         </div>
