--- a/project/sous.html
+++ b/project/sous.html
@@ -17,7 +17,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="rolly.html">Суши</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Соусы</h1>
+    <div class="title1">
+        <h1>Соусы</h1>
+    </div>
     <div class="hfhf">
             <div class="main">
         <div class="mini-containere soda-souse">
@@ -25,8 +27,7 @@
             <h3>Филадельфия</h3>
             <p class="opisanie">семга, сыр</p>
             <div class="price-container">
-                <p class="price">500Тг</p> 
-                <button class="korzina" id="kor">В корзину</button>
+                <p class="price">500 &#8381;</p> 
             </div>
         </div>
         <div class="mini-containere soda-souse">
@@ -34,8 +35,7 @@
             <h3>ПФила с огурцами</h3>
             <p class="opisanie">сыр моцарелла, куриное филе</p>
             <div class="price-container">
-                <p class="price">800Тг</p> 
-                <button class="korzina">В корзину</button>
+                <p class="price">800 &#8381;</p> 
             </div>
         </div>
         <div class="mini-containere soda-souse">
@@ -43,8 +43,7 @@
             <h3>Онигара</h3>
             <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
             <div class="price-container">
-                <p class="price">1000Тг</p> 
-                <button class="korzina">В корзину</button>
+                <p class="price">1000 &#8381;</p> 
             </div>
         </div>
         <div class="mini-containere soda-souse">
@@ -53,8 +52,7 @@
             <div class="dd">
                 <p class="opisanie">угорь, краб, огурец</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
         </div>
@@ -63,14 +61,14 @@
             <h3>Кавасаки</h3>
             <p class="opisanie">жаренный лосось, блинчик, сыр</p>
             <div class="price-container">
-                <p class="price">500Тг</p>                
-                 <button class="korzina">В корзину</button>
+                <p class="price">500 &#8381;</p>                
             </div>
         </div>
     </div>
+    </div>
 </body>
 <footer>
-    <div class="footer1">
+    <div style="margin-top: 165px" class="footer1">
         <div class="footer2">
             <h5 class="footer_text1">АКИРА СУШИ™ © 2018. Все права защищены.</h5>
             <div class="footer3">
@@ -82,7 +80,6 @@
             </div>
             
         </div>
-    </div>
     </div>
 </footer>
 </html>
