--- a/project/zhapechenniyeRoll.html
+++ b/project/zhapechenniyeRoll.html
@@ -17,7 +17,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="rolly.html">Суши</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Запеченные роллы</h1>
+    <div class="title1">
+        <h1>Запеченные роллы</h1>
+    </div>
     <div class="hfhf">
         <div class="main">
             <div class="mini-containere">
@@ -25,8 +27,7 @@
                 <h3>Крылышки 8 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -34,8 +35,7 @@
                 <h3>Крылышки 16  штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">800Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">800 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -43,8 +43,7 @@
                 <h3>Крылышки 25 штук</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">1000Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">1000 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -52,8 +51,7 @@
                 <h3>Куринный нагетсы</h3>
                 <p class="opisanie">Куринный нагетсы</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -61,8 +59,7 @@
                 <h3>Корн док</h3>
                 <p class="opisanie">сардельки в кляре</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -70,8 +67,7 @@
                 <h3 style="padding-top: 90px;">Фри</h3>
                 <p class="opisanie">картофельные фри</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -79,8 +75,7 @@
                 <h3>Сырныйе палочки</h3>
                 <p class="opisanie">острые куринный крылышки</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
         </div>
