--- a/project/zharRolls.html
+++ b/project/zharRolls.html
@@ -17,7 +17,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="rolly.html">Суши</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Жаренные роллы</h1>
+    <div class="title1">
+        <h1>Жаренные роллы</h1>
+    </div>
     <div class="hfhf">
         <div class="main">
             <div class="mini-containere">
@@ -25,8 +27,7 @@
                 <h3>Фреш</h3>
                 <p class="opisanie">кур.филе, огурцы, сыр, свежий</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -34,8 +35,7 @@
                 <h3>Америка</h3>
                 <p class="opisanie">Лосось, угорь, огурцы,</p>
                 <div class="price-container">
-                    <p class="price">800Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">800 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -43,8 +43,7 @@
                 <h3>Угорь темпура</h3>
                 <p class="opisanie">угорь, сыр, унаги соус</p>
                 <div class="price-container">
-                    <p class="price">1000Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">1000 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -52,8 +51,7 @@
                 <h3>Эби темпура</h3>
                 <p class="opisanie">креветки, чесночный соус,</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -61,8 +59,7 @@
                 <h3>Лосось темпура</h3>
                 <p class="opisanie">лосось, сыр</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -70,8 +67,7 @@
                 <h3>сливочный сыр, лосось, имбирь</h3>
                 <p class="opisanie">сливочный сыр, лосось, имбирь</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -79,8 +75,7 @@
                 <h3 style="padding-top: 80px;">Цезарь</h3>
                 <p class="opisanie">куриное филе, огурцы</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -88,8 +83,7 @@
                 <h3>Осака темпура</h3>
                 <p class="opisanie">семга, угорь, сыр</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
         </div>
