--- a/project/pizza.html
+++ b/project/pizza.html
@@ -18,8 +18,9 @@
         <button class="nav1"><a href="krylyia.html">Крылышки</a></button>
         <button class="nav1"><a href="sous.html">Соусы</a></button>
     </nav>
-    <h1 style="margin-left: 290px;">Пиццы</h1>
-
+    <div class="title1">
+        <h1>Пиццы</h1>
+    </div>
     <div class="hfhf">
 
         <div class="main">
@@ -28,8 +29,7 @@
                 <h3>Пицца вегетарианская</h3>
                 <p class="opisanie">сыр моцарелла,шапиньоны, помидоры, болгарский перец</p>
                 <div class="price-container">
-                    <p class="price">500 Т</p> 
-                    <button class="korzina" id="kor">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -37,8 +37,7 @@
                 <h3>Пицца 4 сезона</h3>
                 <p class="opisanie">сыр моцарелла, куриное филе, помидоры, шапиньоны, салями</p>
                 <div class="price-container">
-                    <p class="price">800Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">800 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -46,8 +45,7 @@
                 <h3>Пицца пепперони</h3>
                 <p class="opisanie">сыр моцарелла, салями (Халял)</p>
                 <div class="price-container">
-                    <p class="price">1000Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">1000 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -55,8 +53,7 @@
                 <h3>Пицца болоньезе</h3>
                 <p class="opisanie">сыр моцарелла, фарш говяжий, болгарский перец</p>
                 <div class="price-container">
-                    <p class="price">750Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">750 &#8381;</p> 
                 </div>
             </div>
             <div class="mini-containere">
@@ -64,8 +61,7 @@
                 <h3>Грибная</h3>
                 <p class="opisanie">сыр моцарелла, шампиньоны   </p>
                 <div class="price-container">
-                    <p class="price">500Тг</p>                
-                     <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p>                
                 </div>
             </div>
             <div class="mini-containere">
@@ -73,8 +69,7 @@
                 <h3>Ветчина с грибами</h3>
                 <p class="opisanie">сыр моцарелла, ветчина, шампиньоны</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
     
                 </div>
             </div>
@@ -84,8 +79,7 @@
                 </h3>
                 <p class="opisanie">сыр моцарелла, куриное филе, шампиньоны</p>
                 <div class="price-container">
-                    <p class="price">500Тг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
     
                 </div>
             </div>
@@ -93,15 +87,13 @@
                 <img src="imgFiles/pizza/2022-05-03T12_58_47.900Z-blob" alt="photo" class="mini-photo" >
                 <h3>Пицца маргарита</h3>
                 <p class="opisanie">сыр сыр моцарелла,помидоры</p>
-                <button class="korzina">В корзину</button>
             </div>
             <div class="mini-containere">
                 <img src="imgFiles/pizza/2022-05-03T13_02_20.142Z-blob  " alt="photo" class="mini-photo">
                 <h3>Деревенская</h3>
                 <p class="opisanie">сыр моцарелла, шампиньоны, помидоры</p>
                 <div class="price-container">
-                    <p class="price">500NuТг</p> 
-                    <button class="korzina">В корзину</button>
+                    <p class="price">500 &#8381;</p> 
                 </div>
             </div>
         </div>
